mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_hex_literal.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Invalid integer literal: 0xGHI
--> test_scripts/error_cases/lexer_hex_literal.mux:2:10
   |
 2 | auto x = 0xGHI
   |          ^^^^^
   |
= help: Integer literals cannot contain letters. Variable names must not start with a digit.
